--- a/collections.ipynb
+++ b/collections.ipynb
@@ -4,7 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQjy42oqaJ/yTbUUB6FYRz",
+      "collapsed_sections": [
+        "y6OyxMo_2Gte",
+        "7aKwtVQQ3ZHz",
+        "Dv0n76Y8PKaG"
+      ],
+      "authorship_tag": "ABX9TyPydqWRn1CRGPm+Qp8Fg83C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1095,12 +1100,350 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def deposita_para_todas(contas):\n",
+        "  for conta in contas:\n",
+        "    conta.deposita(100)\n",
+        "\n",
+        "contas = [conta_do_gui, conta_da_dani]\n",
+        "print(contas[0], contas[1])\n",
+        "deposita_para_todas(contas)\n",
+        "print(contas[0], contas[1])"
+      ],
       "metadata": {
         "id": "KJBKo8mRTSW3"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "deposita_para_todas(contas)\n",
+        "print(contas[0], contas[1], contas[2]) # Vai dar erro"
+      ],
+      "metadata": {
+        "id": "toEM16WDUdY-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tupla\n",
+        "guilherme = ('Guilherme', 37, 1981)\n",
+        "daniela = ('Daniela', 31, 1987)\n",
+        "# paulo = (39, 'Paulo', 1979) # ruim"
+      ],
+      "metadata": {
+        "id": "vqIHhE_SU2u2"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui = (15, 1000)\n",
+        "# conta_do_gui.deposita() # Variação OO\n",
+        "\n",
+        "def deposita(conta): # Variação funcional\n",
+        "  conta[1]\n",
+        "\n",
+        "conta_do_gui[1]"
+      ],
+      "metadata": {
+        "id": "IbHiI8o_Xg9j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def deposita(conta): # Variação funcional\n",
+        "  novo_saldo = conta[1] + 100\n",
+        "  codigo = conta[0]\n",
+        "  return (codigo, novo_saldo)"
+      ],
+      "metadata": {
+        "id": "A_IawrJrX-HJ"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "deposita(conta_do_gui)"
+      ],
+      "metadata": {
+        "id": "OOQHMW1WYMD4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c3Y_2xwtYYAD",
+        "outputId": "859df231-7d0e-458b-8629-a3b1bd5f89af"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(15, 1000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui = deposita(conta_do_gui)\n",
+        "conta_do_gui"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ERsObYBYauq",
+        "outputId": "de38188a-bcb0-4f8c-c04a-77abb27759d7"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(15, 1100)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(15,30,200,150,200)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ehPwBAs1Yk-E",
+        "outputId": "94f87e70-12e5-40d1-9eda-4630e0c94d89"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(15, 30, 200, 150, 200)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios = [guilherme, daniela] # lista de tuplas\n",
+        "usuarios"
+      ],
+      "metadata": {
+        "id": "AD0ByPA_ZhvK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios.append(('Paulo', 39, 1979))"
+      ],
+      "metadata": {
+        "id": "23giEtLuZrr9"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y1rn4rIIZx19",
+        "outputId": "2e53d532-116b-407a-9dcc-689d74ca1ef2"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Guilherme', 37, 1981), ('Daniela', 31, 1987), ('Paulo', 39, 1979)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios[0][0] = 'Guilherme Silveira' # Não é possível alterar um valor de uma tupla"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "id": "cAFLvGF8Z4WM",
+        "outputId": "e09eed0d-372d-435a-9c8a-5fd86315c790"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-82-0929da922f03>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musuarios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Guilherme Silveira'\u001b[0m \u001b[0;31m# Não é possível alterar um valor de uma tupla\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conta_do_gui = ContaCorrente(15)\n",
+        "conta_do_gui.deposita(500)\n",
+        "conta_da_dani = ContaCorrente(234876)\n",
+        "conta_da_dani.deposita(1000)\n",
+        "\n",
+        "contas = (conta_do_gui, conta_da_dani)"
+      ],
+      "metadata": {
+        "id": "6U61wfgsaAi9"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for conta in contas:\n",
+        "  print(conta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OZNVP8K_a3e5",
+        "outputId": "cee94a1e-3061-4a64-a05f-c773cc52c30a"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 500<<]\n",
+            "[>>Codigo 234876 Saldo 1000<<]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas.append(423768) # Não existe função append em tupla"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "id": "s2-5UcVHa_ll",
+        "outputId": "6bd4a6eb-eed4-4240-960b-65a1511c460b"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-88-cce81e4e30d5>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcontas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m423768\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Não existe função append em tupla\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contas[0].deposita(300) # Pode modificar, mas não pode remover nem dicionar na tupla."
+      ],
+      "metadata": {
+        "id": "Hy0WH-eubEiT"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for conta in contas:\n",
+        "  print(conta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fYDVYh6DbOfb",
+        "outputId": "74a84453-fdd9-47d1-f2b9-8f946ca6cd26"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[>>Codigo 15 Saldo 1100<<]\n",
+            "[>>Codigo 234876 Saldo 1000<<]\n"
+          ]
+        }
+      ]
     }
   ]
 }
