--- a/collections.ipynb
+++ b/collections.ipynb
@@ -9,7 +9,7 @@
         "7aKwtVQQ3ZHz",
         "Dv0n76Y8PKaG"
       ],
-      "authorship_tag": "ABX9TyPpBvhp/dtzHivVLX2GfX9+",
+      "authorship_tag": "ABX9TyPSjAcINuEHAIhWB+iIO75F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3513,7 +3513,7 @@
       "metadata": {
         "id": "uYTjt87vlcZz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3530,7 +3530,7 @@
         "id": "S4OnIDR2piUM",
         "outputId": "ddfb0073-3ed6-4eae-e2ca-0b959fc730c9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3559,7 +3559,7 @@
         "id": "r_iguNBop0zi",
         "outputId": "146fbf91-b2fb-417d-83b0-1f98871f794a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3585,7 +3585,7 @@
         "id": "st6BYZXcpqyk",
         "outputId": "6543b8cd-43de-4c9c-b9b2-b93ff691a978"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3612,7 +3612,7 @@
         "id": "8lk8BqP1sKWl",
         "outputId": "0295dc89-e1ef-4e1c-e09c-f677e78ec06d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3638,7 +3638,7 @@
         "id": "-1zooct9sYdj",
         "outputId": "534f2863-a853-4111-ea0a-1eb8f9d049b7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3664,7 +3664,7 @@
         "id": "vrGrg0lJsd7r",
         "outputId": "4d0520a2-11e2-44f0-98b6-7f611db5457e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3690,7 +3690,7 @@
         "id": "hKl1lCTVtQ3j",
         "outputId": "f12c356b-9223-4eb3-91dc-0a709468ae23"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3716,7 +3716,7 @@
         "id": "norrvUoUtcBU",
         "outputId": "9a9a2729-1577-488d-8b16-9321bf49419b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3739,7 +3739,7 @@
       "metadata": {
         "id": "XRlh15rzttIb"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3754,7 +3754,7 @@
         "id": "eMjYs2Dftywq",
         "outputId": "7ff844d8-25d7-4845-e0e4-729c54861642"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3782,7 +3782,7 @@
         "id": "65nMrEXat7d8",
         "outputId": "182c1ebb-ea71-4c51-c851-78a8562cef3c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3810,7 +3810,7 @@
         "id": "7gGzyYhIupZF",
         "outputId": "51ce668d-8dd2-4c6b-8346-c5145f94699b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3838,7 +3838,7 @@
         "id": "l8Z2RkmVu8ws",
         "outputId": "a1553cf4-474a-4870-c158-8b2a3b01e68b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3864,7 +3864,7 @@
         "id": "BRbIplxcv166",
         "outputId": "e764e595-a266-4bed-8c37-65c558fb384f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3890,7 +3890,7 @@
         "id": "8fmCWlkNv738",
         "outputId": "5aa451a2-c516-4c33-a7c9-3c5f9f6cb8df"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3916,7 +3916,7 @@
         "id": "F4eFpQB5wBtM",
         "outputId": "2f516bb8-3dcb-4174-94cf-93e3de8cb839"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3943,7 +3943,7 @@
         "id": "Q6QBE2hbwip4",
         "outputId": "d48b4ad6-b248-45d0-c435-f67964ace039"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3965,7 +3965,187 @@
         "len(usuarios)"
       ],
       "metadata": {
-        "id": "v3g8ziA1wq82"
+        "id": "v3g8ziA1wq82",
+        "outputId": "6755adb4-2384-49a9-d5d5-f86214635f8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios"
+      ],
+      "metadata": {
+        "id": "dh5flse4yEGy",
+        "outputId": "2ae5d20c-f9cc-4ed0-bffb-c1d6937ab9a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 5, 13, 17, 34, 52, 76}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios = frozenset(usuarios)\n",
+        "usuarios"
+      ],
+      "metadata": {
+        "id": "xHDKw-2kySTU",
+        "outputId": "50e81e30-e2ab-4f23-dc21-0496623ba1db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "frozenset({1, 5, 13, 17, 34, 52, 76})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(usuarios)"
+      ],
+      "metadata": {
+        "id": "W7kiKgQxyisL",
+        "outputId": "155f3871-4fe7-407d-dc43-5c84b26d557d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "frozenset"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuarios.add(134) # Não tem como adicionar, por se tratar de um frozenset"
+      ],
+      "metadata": {
+        "id": "XJbvALu7ylmd",
+        "outputId": "80ca7c50-4d19-4210-fe10-30c9d7adc8cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-36-f85b988f2472>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musuarios\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m134\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'frozenset' object has no attribute 'add'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "meu_texto = \"Bem vindo meu nome é César eu gosto muito de nomes e tenho o meu xbox e gosto muito de xbox\"\n",
+        "meu_texto.split(\" \")"
+      ],
+      "metadata": {
+        "id": "P9ATEqMKyy9T",
+        "outputId": "80a2ada7-4f8f-436b-d28d-de7152733576",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Bem',\n",
+              " 'vindo',\n",
+              " 'meu',\n",
+              " 'nome',\n",
+              " 'é',\n",
+              " 'César',\n",
+              " 'eu',\n",
+              " 'gosto',\n",
+              " 'muito',\n",
+              " 'de',\n",
+              " 'nomes',\n",
+              " 'e',\n",
+              " 'tenho',\n",
+              " 'o',\n",
+              " 'meu',\n",
+              " 'xbox',\n",
+              " 'e',\n",
+              " 'gosto',\n",
+              " 'muito',\n",
+              " 'de',\n",
+              " 'xbox']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "set(meu_texto.split(\" \"))"
+      ],
+      "metadata": {
+        "id": "2xsj3YZSzXux"
       },
       "execution_count": null,
       "outputs": []
