--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIhHyNLuMVD1eN3D7Uw5++",
+      "authorship_tag": "ABX9TyO8XJTXozPelQgtDzz+lutM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **PANDAS - ANOTAÇÕES**"
+      ],
+      "metadata": {
+        "id": "GIn27oIl2Yn_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[pandas.pydata.org/pandas-docs/stable/](https://)"
+      ],
+      "metadata": {
+        "id": "-KVi8Ou_2lAN"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "xIck9X-_nQsT"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.read_csv('https://github.com/cesarcalafrioli/PYTHON_ANOTACOES/blob/main/dados/aluguel.csv')"
+      ],
+      "metadata": {
+        "id": "-nOw0j-K7dj3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
