--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNguYTmKxPsCmH9KsPkzbQu",
+      "authorship_tag": "ABX9TyM2R2ZvmE3tfuTZKl1+iJb5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,46 +102,110 @@
         "dados.head(10)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 363
-        },
-        "id": "DzfCHNHf9dk3",
-        "outputId": "885e15ed-ddfa-440c-8957-87335b4f0a4e"
+        "id": "DzfCHNHf9dk3"
       },
-      "execution_count": 8,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Informações Gerais sobre a Base de Dados**"
+      ],
+      "metadata": {
+        "id": "OBkXR2A-A0MW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados.dtypes"
+      ],
+      "metadata": {
+        "id": "vs4NE8FEAnd-",
+        "outputId": "bb370f8d-980c-4d21-cfb6-3043edd7accf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                      Tipo           Bairro  Quartos  Vagas  Suites  Area  \\\n",
-              "0                Quitinete       Copacabana        1      0       0    40   \n",
-              "1                     Casa  Jardim Botânico        2      0       1   100   \n",
-              "2  Conjunto Comercial/Sala  Barra da Tijuca        0      4       0   150   \n",
-              "3              Apartamento           Centro        1      0       0    15   \n",
-              "4              Apartamento     Higienópolis        1      0       0    48   \n",
-              "5              Apartamento     Vista Alegre        3      1       0    70   \n",
-              "6              Apartamento         Cachambi        2      0       0    50   \n",
-              "7       Casa de Condomínio  Barra da Tijuca        5      4       5   750   \n",
-              "8       Casa de Condomínio            Ramos        2      2       0    65   \n",
-              "9  Conjunto Comercial/Sala           Centro        0      3       0   695   \n",
-              "\n",
-              "     Valor  Condominio    IPTU  \n",
-              "0   1700.0       500.0    60.0  \n",
-              "1   7000.0         NaN     NaN  \n",
-              "2   5200.0      4020.0  1111.0  \n",
-              "3    800.0       390.0    20.0  \n",
-              "4    800.0       230.0     NaN  \n",
-              "5   1200.0         NaN     NaN  \n",
-              "6   1300.0       301.0    17.0  \n",
-              "7  22000.0         NaN     NaN  \n",
-              "8   1000.0         NaN     NaN  \n",
-              "9  35000.0     19193.0  3030.0  "
+              "Tipo           object\n",
+              "Bairro         object\n",
+              "Quartos         int64\n",
+              "Vagas           int64\n",
+              "Suites          int64\n",
+              "Area            int64\n",
+              "Valor         float64\n",
+              "Condominio    float64\n",
+              "IPTU          float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipos_de_dados = pd.DataFrame(dados.dtypes, columns = ['Tipos de Dados'])"
+      ],
+      "metadata": {
+        "id": "jYPGIx0BDJRL"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipos_de_dados.columns.name = 'Variáveis'"
+      ],
+      "metadata": {
+        "id": "mTndkawIDaJJ"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipos_de_dados"
+      ],
+      "metadata": {
+        "id": "zzuayztlDjOS",
+        "outputId": "bbe21e50-79c8-49e9-d197-bc7b9e56134f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Variáveis  Tipos de Dados\n",
+              "Tipo               object\n",
+              "Bairro             object\n",
+              "Quartos             int64\n",
+              "Vagas               int64\n",
+              "Suites              int64\n",
+              "Area                int64\n",
+              "Valor             float64\n",
+              "Condominio        float64\n",
+              "IPTU              float64"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3671542a-135e-4c16-8c95-30795c09a416\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0c7e1851-b9e0-42b9-8582-cf5a77c276c6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -159,138 +223,46 @@
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Tipo</th>\n",
-              "      <th>Bairro</th>\n",
-              "      <th>Quartos</th>\n",
-              "      <th>Vagas</th>\n",
-              "      <th>Suites</th>\n",
-              "      <th>Area</th>\n",
-              "      <th>Valor</th>\n",
-              "      <th>Condominio</th>\n",
-              "      <th>IPTU</th>\n",
+              "      <th>Variáveis</th>\n",
+              "      <th>Tipos de Dados</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Quitinete</td>\n",
-              "      <td>Copacabana</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>40</td>\n",
-              "      <td>1700.0</td>\n",
-              "      <td>500.0</td>\n",
-              "      <td>60.0</td>\n",
+              "      <th>Tipo</th>\n",
+              "      <td>object</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Casa</td>\n",
-              "      <td>Jardim Botânico</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>100</td>\n",
-              "      <td>7000.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>Bairro</th>\n",
+              "      <td>object</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Conjunto Comercial/Sala</td>\n",
-              "      <td>Barra da Tijuca</td>\n",
-              "      <td>0</td>\n",
-              "      <td>4</td>\n",
-              "      <td>0</td>\n",
-              "      <td>150</td>\n",
-              "      <td>5200.0</td>\n",
-              "      <td>4020.0</td>\n",
-              "      <td>1111.0</td>\n",
+              "      <th>Quartos</th>\n",
+              "      <td>int64</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Apartamento</td>\n",
-              "      <td>Centro</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>15</td>\n",
-              "      <td>800.0</td>\n",
-              "      <td>390.0</td>\n",
-              "      <td>20.0</td>\n",
+              "      <th>Vagas</th>\n",
+              "      <td>int64</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Apartamento</td>\n",
-              "      <td>Higienópolis</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>48</td>\n",
-              "      <td>800.0</td>\n",
-              "      <td>230.0</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>Suites</th>\n",
+              "      <td>int64</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>Apartamento</td>\n",
-              "      <td>Vista Alegre</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>70</td>\n",
-              "      <td>1200.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>Area</th>\n",
+              "      <td>int64</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>Apartamento</td>\n",
-              "      <td>Cachambi</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>50</td>\n",
-              "      <td>1300.0</td>\n",
-              "      <td>301.0</td>\n",
-              "      <td>17.0</td>\n",
+              "      <th>Valor</th>\n",
+              "      <td>float64</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>Casa de Condomínio</td>\n",
-              "      <td>Barra da Tijuca</td>\n",
-              "      <td>5</td>\n",
-              "      <td>4</td>\n",
-              "      <td>5</td>\n",
-              "      <td>750</td>\n",
-              "      <td>22000.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>Condominio</th>\n",
+              "      <td>float64</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>Casa de Condomínio</td>\n",
-              "      <td>Ramos</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>65</td>\n",
-              "      <td>1000.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>Conjunto Comercial/Sala</td>\n",
-              "      <td>Centro</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "      <td>695</td>\n",
-              "      <td>35000.0</td>\n",
-              "      <td>19193.0</td>\n",
-              "      <td>3030.0</td>\n",
+              "      <th>IPTU</th>\n",
+              "      <td>float64</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -298,7 +270,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3671542a-135e-4c16-8c95-30795c09a416')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c7e1851-b9e0-42b9-8582-cf5a77c276c6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -350,12 +322,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3671542a-135e-4c16-8c95-30795c09a416 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0c7e1851-b9e0-42b9-8582-cf5a77c276c6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3671542a-135e-4c16-8c95-30795c09a416');\n",
+              "        const element = document.querySelector('#df-0c7e1851-b9e0-42b9-8582-cf5a77c276c6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -375,8 +347,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-dac7f2a4-3ce5-40a6-a290-49d501051e7a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dac7f2a4-3ce5-40a6-a290-49d501051e7a')\"\n",
+              "<div id=\"df-7b2f2d9f-30d0-4f2d-81df-5fc5d42611e2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7b2f2d9f-30d0-4f2d-81df-5fc5d42611e2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -495,7 +467,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-dac7f2a4-3ce5-40a6-a290-49d501051e7a button');\n",
+              "        document.querySelector('#df-7b2f2d9f-30d0-4f2d-81df-5fc5d42611e2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -506,7 +478,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados.shape\n",
+        "# Resultado -> (Número de linhas, número de variáveis)"
+      ],
+      "metadata": {
+        "id": "PimYBflwDojC",
+        "outputId": "ac6aea9b-bfb6-431b-a4d1-9715b5d62cfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(32960, 9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     }
