--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2R2ZvmE3tfuTZKl1+iJb5",
+      "authorship_tag": "ABX9TyN8YP11uOcMWrf0mg1leLeY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,11 +122,11 @@
         "dados.dtypes"
       ],
       "metadata": {
-        "id": "vs4NE8FEAnd-",
-        "outputId": "bb370f8d-980c-4d21-cfb6-3043edd7accf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vs4NE8FEAnd-",
+        "outputId": "bb370f8d-980c-4d21-cfb6-3043edd7accf"
       },
       "execution_count": 10,
       "outputs": [
@@ -179,12 +179,12 @@
         "tipos_de_dados"
       ],
       "metadata": {
-        "id": "zzuayztlDjOS",
-        "outputId": "bbe21e50-79c8-49e9-d197-bc7b9e56134f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 332
-        }
+        },
+        "id": "zzuayztlDjOS",
+        "outputId": "bbe21e50-79c8-49e9-d197-bc7b9e56134f"
       },
       "execution_count": 17,
       "outputs": [
@@ -489,11 +489,11 @@
         "# Resultado -> (Número de linhas, número de variáveis)"
       ],
       "metadata": {
-        "id": "PimYBflwDojC",
-        "outputId": "ac6aea9b-bfb6-431b-a4d1-9715b5d62cfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PimYBflwDojC",
+        "outputId": "ac6aea9b-bfb6-431b-a4d1-9715b5d62cfb"
       },
       "execution_count": 19,
       "outputs": [
@@ -506,6 +506,81 @@
           },
           "metadata": {},
           "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados.shape[0]"
+      ],
+      "metadata": {
+        "id": "--u787RwD4tD",
+        "outputId": "71271fc9-f04b-4c10-c31b-3b75cfd21317",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32960"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados.shape[1]"
+      ],
+      "metadata": {
+        "id": "o8grjD7FD5rV",
+        "outputId": "70a523f1-a07c-41f5-bfea-001f4a812827",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('A base de dados apresenta {} registros ( imóveis ) e {} variáveis'.format(dados.shape[0], dados.shape[1]))"
+      ],
+      "metadata": {
+        "id": "nTm06mkmD8Xz",
+        "outputId": "9d092068-061a-4d44-b77b-bb82ef2c5c89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A base de dados apresenta 32960 registros ( imóveis ) e 9\n"
+          ]
         }
       ]
     }
