--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -3924,12 +3924,12 @@
         "dados.head(10)"
       ],
       "metadata": {
-        "id": "aaJBQKDelDqq",
-        "outputId": "50b6b4cd-90c0-4874-c83c-944629b97b57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "aaJBQKDelDqq",
+        "outputId": "50b6b4cd-90c0-4874-c83c-944629b97b57"
       },
       "execution_count": 12,
       "outputs": [
@@ -4360,11 +4360,11 @@
         "type(tipo_de_imovel)"
       ],
       "metadata": {
-        "id": "hGCf9yiZn2Wb",
-        "outputId": "c97f0bcc-f757-4b01-e236-740f64541885",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hGCf9yiZn2Wb",
+        "outputId": "c97f0bcc-f757-4b01-e236-740f64541885"
       },
       "execution_count": 15,
       "outputs": [
@@ -4386,11 +4386,11 @@
         "tipo_de_imovel.drop_duplicates()"
       ],
       "metadata": {
-        "id": "uVGxZLu5oLCo",
-        "outputId": "6af1a478-20a8-4ca3-d759-fc27725964c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uVGxZLu5oLCo",
+        "outputId": "6af1a478-20a8-4ca3-d759-fc27725964c5"
       },
       "execution_count": 16,
       "outputs": [
@@ -4434,11 +4434,11 @@
         "tipo_de_imovel.index"
       ],
       "metadata": {
-        "id": "Q3wUP5k0sBX7",
-        "outputId": "bcd13670-e01a-4140-c115-6b2d4c2e18c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q3wUP5k0sBX7",
+        "outputId": "bcd13670-e01a-4140-c115-6b2d4c2e18c4"
       },
       "execution_count": 17,
       "outputs": [
@@ -4460,11 +4460,11 @@
         "range(tipo_de_imovel.shape[0])"
       ],
       "metadata": {
-        "id": "6s-AXIIKsJcj",
-        "outputId": "333b6fb3-fc50-43e3-dcea-c11b4f3a925c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6s-AXIIKsJcj",
+        "outputId": "333b6fb3-fc50-43e3-dcea-c11b4f3a925c"
       },
       "execution_count": 20,
       "outputs": [
@@ -4500,8 +4500,137 @@
       "metadata": {
         "id": "11igcaOes6Sc"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipo_de_imovel.index"
+      ],
+      "metadata": {
+        "id": "4D-i2q7ZufFD",
+        "outputId": "65e83014-6543-4afd-a544-3704751320c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RangeIndex(start=0, stop=32960, step=1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipo_de_imovel.columns.name = \"id\""
+      ],
+      "metadata": {
+        "id": "fnIymgcPujNs",
+        "outputId": "cb4d1a66-b6d1-4a00-b897-74caae7f3093",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-30-d3a8de88d151>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtipo_de_imovel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"id\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5900\u001b[0m         ):\n\u001b[1;32m   5901\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5902\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5903\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5904\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'columns'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipo_de_imovel"
+      ],
+      "metadata": {
+        "id": "g3S5vFXHurJz",
+        "outputId": "1aaf83c9-8e5b-4dc2-f247-d4d3ba0311f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0                      Quitinete\n",
+              "1                           Casa\n",
+              "2        Conjunto Comercial/Sala\n",
+              "3                    Apartamento\n",
+              "4                    Apartamento\n",
+              "                  ...           \n",
+              "32955                  Quitinete\n",
+              "32956                Apartamento\n",
+              "32957                Apartamento\n",
+              "32958                Apartamento\n",
+              "32959    Conjunto Comercial/Sala\n",
+              "Name: Tipo, Length: 32960, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipo_de_imovel.index = range(len(tipo_de_imovel))"
+      ],
+      "metadata": {
+        "id": "KybOsLlA01lN"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tipo_de_imovel.index"
+      ],
+      "metadata": {
+        "id": "mi5ftpIG13WG",
+        "outputId": "14f6a901-c728-4adf-ca2e-e517a37d0ab3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RangeIndex(start=0, stop=32960, step=1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     }
   ]
 }
