--- a/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatística_Parte_1.ipynb
@@ -234,12 +234,12 @@
         "dados"
       ],
       "metadata": {
-        "id": "1bPDM_pno6W8",
-        "outputId": "c421ad33-ecc1-4588-8b98-3ca5e26f05e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "1bPDM_pno6W8",
+        "outputId": "c421ad33-ecc1-4588-8b98-3ca5e26f05e9"
       },
       "execution_count": 4,
       "outputs": [
@@ -628,12 +628,12 @@
         "dados.head()"
       ],
       "metadata": {
-        "id": "g73-ilufplBG",
-        "outputId": "a83ba396-3e6c-4628-b1d5-c48a0daa5359",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "g73-ilufplBG",
+        "outputId": "a83ba396-3e6c-4628-b1d5-c48a0daa5359"
       },
       "execution_count": 5,
       "outputs": [
@@ -1123,12 +1123,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "sr4JXeZkjQK5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sr4JXeZkjQK5",
+        "outputId": "7d1191d3-48f3-4711-9e76-79fca3596ff4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "De 13 até 99 anos\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('De %s até %s anos' % (dados.Idade.min(), dados.Idade.max()))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1157,12 +1171,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "jOW-bGyRjQK8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jOW-bGyRjQK8",
+        "outputId": "3a6f7a5a-b7c1-482d-a250-a761c1b31b36"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "De 1.339244614 até 2.028496765 anos\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('De %s até %s anos' % (dados['Altura'].min(), dados.Altura.max()))"
+      ]
     },
     {
       "cell_type": "markdown",
