[REFACT][MAIN] - Atualiza PCEP_PE1_MODULO2.ipynb

--- a/PCEP_PE1_MODULO2.ipynb
+++ b/PCEP_PE1_MODULO2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNp21kyt1C5TEHs7dRQnMtm",
+      "authorship_tag": "ABX9TyNJXR+O3vRpOInBwKo821nE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Literals"
+        "## Literals"
       ],
       "metadata": {
         "id": "lYXJHzEfeOkJ"
@@ -98,6 +98,43 @@
         "print(\"2\") # A função print mostra ambas as literais na forma legível para humanos\n",
         "print(2)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Inteiros"
+      ],
+      "metadata": {
+        "id": "OeRg1qcziTNY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Inteiro é um tipo de dados desprovido de partes fracionárias."
+      ],
+      "metadata": {
+        "id": "mJ81_041iVDB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Referências"
+      ],
+      "metadata": {
+        "id": "cjFRSJCAjijJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://edube.org/learn/pe-1/python-literals-32\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nCMOZzlbjkbA"
+      }
     }
   ]
 }
